--- a/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.scss
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.scss
@@ -7,6 +7,9 @@ h2 {
     text-align: center;
     color: #191A39;
     margin-bottom: 14px;
+    @media(max-width: 1200px){
+        color: #DEDEFB;
+    }
 }
 
 h3 {
@@ -18,6 +21,9 @@ h3 {
     text-align: center;
     color: #000;
     margin-bottom: 24px;
+    @media(max-width: 1200px){
+        color: #DEDEFB;
+    }
 }
 
 form {
@@ -42,6 +48,9 @@ form .rules p{
     line-height: 15px;
     color: #525F73;
     margin-bottom: 16px;
+    @media(max-width: 1200px){
+        color: #DEDEFB;
+    }
 }
 
 form .action {
@@ -76,10 +85,10 @@ form .select {
         &:hover {
           background-color: transparent !important;
           border: 1px solid #237BEF !important;
-        }
       }
-    }
   }
+}
+}
 
 .read{
     border: 1px solid #ECECEC;
@@ -91,6 +100,9 @@ form .select {
     margin-right: 6px;
     margin-top: -2px;
     position: relative;
+    @media(max-width: 1200px){
+        border: 1px solid #DEDEFB;
+    }
     &::after{
         content: "";
         position: absolute;
@@ -116,6 +128,16 @@ form .select {
 .check{
     display: flex;
     align-items: center;
+    span{
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 1.15;
+        color: #525F73;
+        @media(max-width: 1200px){
+            color: #DEDEFB;
+        }
+    }
+    
     input{
         &:checked{
             &+label{
@@ -124,6 +146,18 @@ form .select {
                     opacity: 1;
                 }
             }
+        }
+    }
+}
+
+.rules{
+    p{
+        a{
+            font-weight: 400;
+            font-size: 13px;
+            line-height: 1.15;
+            color: #237BEF;
+            text-decoration: none;
         }
     }
 }
