popups qubera mobile

--- a/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.scss
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.scss
@@ -118,6 +118,9 @@ form .select {
         background-size: 100%;
         opacity: 0;
         transition: .3s;
+        @media(max-width: 1200px){
+        background-image: url(/check.svg);
+    }
     }
 }
 
