done create currency, get balance info by euro, change structure steps by create fug account, add datepicker to create fug account

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -296,10 +296,11 @@
           *ngSwitchCase="Tab.QUBERA"
           [balances]="quberaBalances$ | async"
           [existQuberaAccounts]="existQuberaAccounts"
-          [kycStatus]="kycStatus"
+          [kycStatus]="kycStatusQubera"
           (transferQuberaOut)="goToTransferQuberaPopup($event)"
           (cryptoWithdrawQuberaOut)="goToQuberaWithdrawPopup($event)"
           (createFugAccount)="goToQuberaAccountPopup($event)"
+          (createCurrency)="goToCreateCurrencyPopup($event)"
           (cryptoDepositQuberaOut)="goToQuberaDepositPopup($event)">
         </app-qubera-table>
       </ng-container>
