--- a/src/app/funds/balance/qubera-popup/create-currency/create-currency.component.scss
+++ b/src/app/funds/balance/qubera-popup/create-currency/create-currency.component.scss
@@ -20,7 +20,8 @@
     margin-bottom: 30px;
 }
 .qubera-content form {
-    
+    max-width: 400px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -128,8 +129,3 @@
     }
   }
   
-
-.qubera-content{
-  max-width: 491px;
-  margin: auto;
-}
