--- a/src/assets/scss/components/_datepicker.scss
+++ b/src/assets/scss/components/_datepicker.scss
@@ -1,11 +1,13 @@
 .mydp {
   display: block;
   box-sizing: border-box;
-  width: calc(100% - 5px) !important;
+  // width: calc(100% - 5px) !important;
+  width: calc(100% - 5px);
   height: 36px;
-  margin: 0 2.5px !important;
+  // margin: 0 2.5px !important;
+  margin: 0 2.5px;
   padding: 0 12px;
-  border: 1px solid #A0A0A0 !important;
+  border: 1px solid #A0A0A0;
   border-radius: 4px!important;
   font-size: 14px;
   @media(max-width: 380px){
@@ -87,11 +89,12 @@
 /*--- DARK THEME START---*/
 .dark-theme{
   .mydp {
-    border: 1px solid $light-blue !important;
+    // border: 1px solid $light-blue !important;
+    border: 1px solid $light-blue;
 
   }
   .mydp .selection {
-    color:#fff !important;
+    color:#fff;
   }
   .icon-mydpcalendar {
     &:before {
