--- a/src/app/funds/balance/qubera-popup/deposit/deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/deposit.component.html
@@ -1,7 +1,7 @@
 
 <div class="modal__header-mob">
     <div class="steps__counter steps__counter--mob">{{'step' | translate}}
-      <span class="steps__counter-val">{{step}}</span>/4
+      <span class="steps__counter-val">{{step}}</span>/1
     </div>
     <div class="modal__header-mob-controls">
       <a class="modal__control-mob" (click)="onCloseSendMoneyPopup()">
@@ -26,6 +26,7 @@
     <app-step-one-deposit
       *ngIf="step === 1"
       [quberaBank]="qubera"
+      (closeSendQuberaPopup)="onCloseSendMoneyPopup()"
     >
     </app-step-one-deposit>
   </div>
