--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -70,20 +70,38 @@
         </app-price-input> -->
     </div>
   </form>
-  <div class="info-block" id="pdf-download">
+  <div class="info-block" *ngIf="bankInfo !== undefined">
     <div class="left-part">
       <div class="left-block">
-        <div class="item-info">
-          <span class="key-info">Bank</span>
-          <span class="value-info">CIMB NIAGA</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Acсount number</span>
-          <span class="value-info">704912137600</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Recipient</span>
-          <span class="value-info">Tab Xtra</span>
+        <div class="print-block" id="pdf-download">
+          <div class="item-info">
+            <span class="key-info">{{'Bank' | translate}}</span>
+            <span class="value-info">{{bankInfo?.bankName}}</span>
+          </div>
+          <div class="item-info">
+            <span class="key-info">{{'Acсount number' | translate}}</span>
+            <span class="value-info">{{bankInfo?.iban}}</span>
+          </div>
+          <div class="item-info">
+            <span class="key-info">{{'Recipient' | translate}}</span>
+            <span class="value-info">{{bankInfo?.bic}}</span>
+          </div>
+          <div class="item-info">
+            <span class="key-info">{{'Country' | translate}}</span>
+            <span class="value-info">{{bankInfo?.country}}</span>
+          </div>
+          <div class="item-info">
+            <span class="key-info">{{'City' | translate}}</span>
+            <span class="value-info">{{bankInfo?.city}}</span>
+          </div>
+          <div class="item-info">
+            <span class="key-info">{{'Address' | translate}}</span>
+            <span class="value-info">{{bankInfo?.address}}</span>
+          </div>
+          <div class="item-info">
+            <span class="key-info">{{'Swift code' | translate}}</span>
+            <span class="value-info">{{bankInfo?.swiftCode}}</span>
+          </div>
         </div>
         <button class="print" (click)="download()">
           <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
@@ -92,7 +110,7 @@
             <path d="M13.0621 11.875H5.9375V13.0626H13.0621V11.875Z" fill="#237BEF"/>
             <path d="M17.8126 4.75H1.18759C0.531746 4.75 0 5.2822 0 5.93743V13.0625C0 13.7188 0.531746 14.2498 1.18759 14.2498H3.56265V17.8124C3.56265 18.4689 4.09439 19 4.75023 19H14.2501C14.9064 19 15.4375 18.4689 15.4375 17.8124V14.2498H17.8126C18.4689 14.2498 19 13.7188 19 13.0625V5.93743C19 5.2822 18.469 4.75 17.8126 4.75ZM14.2501 17.8125H4.75023V10.6874H14.2501V17.8125ZM16.6249 8.31254C15.9686 8.31254 15.4375 7.78139 15.4375 7.12498C15.4375 6.46983 15.9686 5.93743 16.6249 5.93743C17.2814 5.93743 17.8126 6.46979 17.8126 7.12498C17.8126 7.78136 17.2814 8.31254 16.6249 8.31254Z" fill="#237BEF"/>
           </svg>
-          <span>Print invoice</span>
+          <span>{{'Print invoice' | translate}}</span>
         </button>
       </div>
     </div>
@@ -121,7 +139,7 @@
       </div> -->
     <!-- </div> -->
   </div>
-  <button class="btn btn--active balance__title-btn">OK</button>
+  <button class="btn btn--active balance__title-btn" (click)="closeSendQuberaPopup.emit(true)">OK</button>
   <div class="notice-block">
     <span class="head-notice">Напоминаем:</span>
     <ul>
