--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -12,7 +12,7 @@
       <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
     </tr>
   </thead>
-  <tbody class="table__body">
+  <tbody class="table__body" *ngIf="balances != undefined">
     <!-- <tr class="table__row">
       <td class="table__cell">
         <div class="balance__currency">
@@ -87,7 +87,7 @@
         <div class="qubera-btn-wr" *ngSwitchCase="'SUCCESS'">
             <button class="btn btn--active balance__title-btn" (click)="createCurrency.emit(true)">{{'Create currency' | translate}}</button>
         </div>
-        <div class="qubera-btn-wr" *ngSwitchCase="'Field'">
+        <div class="qubera-btn-wr" *ngSwitchCase="'Failed'">
           <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Create KYC' | translate}}</button>
         </div>
         <!-- если заявка на подтверждении -->
@@ -110,6 +110,10 @@
             </defs>
           </svg>
           <span>{{'KYC application on confirmation' | translate}}</span>
+        </div>
+
+        <div class="qubera-btn-wr" *ngSwitchDefault>
+          <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Create KYC' | translate}}</button>
         </div>
       <!-- end 'если заявка на подтверждении' -->
       </div>
@@ -178,7 +182,10 @@
               </div>
 
 
-             <button class="btn btn--active balance__title-btn" (click)="showPopup()">button for popup</button>
+             <!-- <button class="btn btn--active balance__title-btn" (click)="showPopup()">button for popup</button> -->
+
+
+
     <!-- <div class="qubera-icon">
       <svg width="24" height="21" viewBox="0 0 24 21" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M4.14605 7.02734H6.0973L6.39013 16.003H3.90234L4.14605 7.02734Z" fill="white"/>
