fix some bugs, add page success, change create currency popup

--- a/src/app/funds/balance/qubera-popup/create-fug/create-fug.component.html
+++ b/src/app/funds/balance/qubera-popup/create-fug/create-fug.component.html
@@ -37,6 +37,7 @@
   <app-step-one
     *ngIf="step === 1"
     (nextStep)="nextStep(2)"
+    (closeSendQuberaPopup)="onCloseSendMoneyPopup()"
   >
   </app-step-one>
   <app-step-two
