--- a/src/app/funds/balance/qubera-popup/create-currency/create-currency.component.html
+++ b/src/app/funds/balance/qubera-popup/create-currency/create-currency.component.html
@@ -1,50 +1,47 @@
 <!-- modal header start -->
 <div class="modal__header-mob">
-	<div class="steps__counter steps__counter--mob">
+	<div class="steps__counter steps__counter--mob">{{'step' | translate}}
+		<span class="steps__counter-val">{{step}}</span>/2
 	</div>
 	<div class="modal__header-mob-controls">
 		<a class="modal__control-mob" (click)="onCloseSendMoneyPopup()">
 		<img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
 	</div>
-</div>
-<div class="modal__content qubera-content">
-	<div class="fiat-deposit-s1 fiat-transfer">
-		<h2>{{'Confirmation account creation' | translate}}</h2>
-		<p>{{'To open an Exrates account, confirm the transaction with a code and email.' | translate}}</p>
-		<form  [formGroup]="form">
-			<div class="input-block">
-				<input type="text" name="code" class="wrap-input__input" formControlName="code" required>
-				<label class="wrap-input__label" for="firstname">{{'Code' | translate}}</label>
-				<ng-container *ngIf="!currentCode.valid && !currentCode.untouched">
-					<div class="input-hint-wrapper">
-					   <span
-						 class="wrap-input__message"
-						 *ngIf="!currentCode.valid">
-						  {{'Code field is required.' | translate}}
-					   </span>
-					</div>
-				</ng-container>
-			</div>
-			<button
-				class="btn btn--center"
-				[ngClass]="{'btn--empty-blue': !form.valid}"
-				[disabled]="form.invalid"
-				(click)="enterCode(form.value)">{{'Confirm' | translate}}</button>
-			
-		</form>
 	</div>
-		<div class="notice-block">
-			<span class="head-notice">{{'Please note' | translate}}:</span>
-			<ul>
-				<li>
-					<span>{{'Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.' | translate}}
-					</span>
-				</li>
-				<li>
-					<span>{{'After making a withdrawal, you can track its progress in history on funds page.' | translate}}
-					</span>
-				</li>
-
-			</ul>
-		</div>
+	<div class="modal__header">
+	<ul class="steps">
+		<li class="steps__item"
+			[ngClass]="{'steps__item--current': step === 1}"
+		>
+		<a class="steps__link" (click)="setStep(1)">
+			<span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
+			<span class="steps__number-mob-current">1. {{'Submission of the questionnaire' | translate}}</span>
+			<span class="steps__title">{{'Submission of the questionnaire' | translate}}</span>
+		</a>
+		</li>
+		<li class="steps__item" *ngIf="step >= 2"
+			[ngClass]="{'steps__item--current': step === 2}"
+		>
+		<a class="steps__link" (click)="setStep(2)">
+			<span class="steps__number" [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
+			<span class="steps__number-mob-current">2. {{'Phone verification' | translate}}</span>
+			<span class="steps__title">{{'Phone verification' | translate}}</span>
+		</a>
+		</li>
+	</ul>
+	<div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/ 2</div>
+</div>
+	<!-- modal header end -->
+	
+<div class="modal__content">
+	<app-step-one-currency
+		*ngIf="step === 1"
+		(nextStep)="nextStep(2)"
+	>
+	</app-step-one-currency>
+	<app-step-two-currency
+		*ngIf="step === 2"
+		(closeSendQuberaPopup)="onCloseSendMoneyPopup()"
+	>
+	</app-step-two-currency>
 </div>
