--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -38,7 +38,7 @@
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{(item.exExchangeRate || item.limitRate)  | currencyFormat:arrPairName[1]}} {{arrPairName[1]}}</span>
+      <span>{{(item.exExchangeRate || item.limitRate)  | currencyFormat:'BTC': 'short'}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
       <span>{{item.orderBaseType !== 'STOP_LIMIT' ? '-' : item.stopRate  | currencyFormat:arrPairName[1]}} {{item.orderBaseType !== 'STOP_LIMIT' ? '' : arrPairName[1]}}</span>
@@ -47,10 +47,10 @@
       <span>{{item.amountBase | currencyFormat:arrPairName[0]}} {{arrPairName[0]}}</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>{{item.commissionFixedAmount | currencyFormat:arrPairName[1]}} {{arrPairName[1]}}</span>
+      <span>{{item.commissionFixedAmount | currencyFormat:'BTC': 'short'}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountWithCommission | currencyFormat:arrPairName[1]}} {{arrPairName[1]}}</span>
+      <span>{{item.amountWithCommission | currencyFormat:'BTC': 'short'}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
       <button class="btn btn--small btn--empty-red btn--hidden"
