--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -179,7 +179,7 @@
           [ngClass]="{'tabs__item--active': currTab === Tab.FIAT}"
           (click)="onSelectTab(Tab.FIAT)"
         >
-          {{'Fiat Balances' | translate}}
+          {{'Trading Fiat Balances' | translate}}
         </button>
 
         <button
@@ -202,7 +202,7 @@
               <path d="M8.73017 7.02734H10.6814L10.9741 16.003H8.4375L8.73017 7.02734Z" fill="white"/>
             </svg>
           </div>
-          <span>{{'Qubera Balance' | translate}}</span>
+          <span>{{'Personal Fiat Balances' | translate}}</span>
         </button>
 
         <button
