--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -112,34 +112,8 @@
     </div>
   </div>
 
-  <div class="info-block">
-    <div class="left-part">
-      <div class="left-block">
-        <div class="item-info">
-          <span class="key-info">You want to withdraw:</span>
-          <span class="value-info">550 EUR</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Exchange comission:</span>
-          <span class="value-info">3% = 15 EUR</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Merchant comission:</span>
-          <span class="value-info">12% = 0.000005 EUR (but not less than 0.000005)</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Total comission:</span>
-          <span class="value-info">24% = 0.000005 EUR</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Total with comission:</span>
-          <span class="value-info">0.000005 EUR</span>
-        </div>
-        
-      </div>
-    </div>
-  </div>
-  <button class="btn btn--active balance__title-btn"
+  
+  <button class="btn balance__title-btn"
       [disabled]="!form.valid" (click)="submit(form)">Withdrawal 550 EUR</button>
 </form>
 
@@ -156,5 +130,6 @@
     </li>
 
   </ul>
+</div>
 </div>
 </div>
