--- a/src/app/shared/components/price-input/price-input.component.scss
+++ b/src/app/shared/components/price-input/price-input.component.scss
@@ -11,34 +11,34 @@
 //}
 
 
-@media (min-width:1200px){
-  input{
-    &:not([value=""]){
-      ~ .wrap-input__label {
-        top: -5px;
-        left: 12px;
-        padding: 0 2px;
-        background-color: #fff;
-        font-size: 10px;
-        line-height: 12px;
+// @media (min-width:1200px){
+//   input{
+//     &:not([value=""]){
+//       ~ .wrap-input__label {
+//         top: -5px;
+//         left: 12px;
+//         padding: 0 2px;
+//         background-color: #fff;
+//         font-size: 10px;
+//         line-height: 12px;
         
-      }
-    }
-  }
-}
-@media (max-width:1199px){
+//       }
+//     }
+//   }
+// }
+// @media (max-width:1199px){
   
-    input{
-    &:not([value=""]){
-      ~ .wrap-input__label {
-        top: -5px;
-        left: 12px;
-        padding: 0 2px;
-        background-color:#191A39;
-        font-size: 10px;
-        line-height: 12px;
-        color: #DEDEFB;
-      }
-    }
-  }
-}
+//     input{
+//     &:not([value=""]){
+//       ~ .wrap-input__label {
+//         top: -5px;
+//         left: 12px;
+//         padding: 0 2px;
+//         background-color:#191A39;
+//         font-size: 10px;
+//         line-height: 12px;
+//         color: #DEDEFB;
+//       }
+//     }
+//   }
+// }
